Added improved example for Restlet redirection basics

--- a/src/main/webapp/statics/index.html
+++ b/src/main/webapp/statics/index.html
@@ -9,10 +9,6 @@
 <body>
 	<h1>My Test Application</h1>
 
-	<h2>This should show that static contents can be served from this server</h2>
-	
-	<p><a href="second.html">A link to a second page</a></p>
-
+	<h2>Default index page</h2>
 </body>
-
 </html>
